force-app/main/default/objects/simpli_lv__List_View_Config_Description__mdt/simpli_lv__List_View_Config_Description__mdt.object-meta.xml
<CustomObject>
    <label>List View Config Description</label>
    <pluralLabel>List View Config Descriptions</pluralLabel>
</CustomObject>