force-app/main/default/objects/simpli_lv__List_View_Config_Description__mdt/fields/simpli_lv__Display_Name__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Display_Name__c</fullName>
    <label>Display Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>