force-app/main/default/objects/simpli_lv__List_View_Config_Description__mdt/fields/simpli_lv__Long_Description__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Long_Description__c</fullName>
    <label>Long Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>