force-app/main/default/objects/simpli_lv__List_View_Config_Description__mdt/fields/simpli_lv__LWC_Component_Label__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__LWC_Component_Label__c</fullName>
    <description>The label used when building an LWC UI component</description>
    <inlineHelpText>The label used when building an LWC UI component</inlineHelpText>
    <label>LWC Component Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>