force-app/main/default/objects/simpli_lv__List_View_Config_Description__mdt/fields/simpli_lv__Type__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>