force-app/main/default/objects/simpli_lv__List_View_Config_Description__mdt/listViews/simpli_lv__All.listView-meta.xml
<ListView>
    <fullName>simpli_lv__All</fullName>
    <columns>simpli_lv__Display_Name__c</columns>
    <columns>MasterLabel</columns>
    <columns>simpli_lv__LWC_Component_Label__c</columns>
    <columns>simpli_lv__Long_Description__c</columns>
    <columns>simpli_lv__Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>